# QSVM_CyberX

./: .env.example  Dockerfile  MULTI  README.md  anomaly_events.db  demo_visualizations.py  ml_expansion_guide.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
quantum_anomaly/: orchestrator.py
quantum_anomaly/capture/: live_sniffer.py  pcap_loader.py
quantum_anomaly/features/: engine.py
quantum_anomaly/models/: advanced_models.py  classical_svm.py  eval.py  online.py  quantum_svm.py
quantum_anomaly/online/: buffer.py
quantum_anomaly/quantum/: kernel.py
quantum_anomaly/security/: qkd.py  secure_channel.py
quantum_anomaly/storage/: db.py
quantum_anomaly/ui/: theme.py
quantum_anomaly/utils/: logging_setup.py
quantum_anomaly_qkd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: dev.ps1  dev.sh
streamlit_app/: app.py
streamlit_app/assets/: styles.css
streamlit_app/pages/: 01_Live_Capture.py  02_PCAP_Upload.py  03_Quantum_vs_Classical.py  04_Crypto_QKD.py  05_Security_Dashboard.py  06_Cyber_Ops.py  07_Behind_The_Scenes.py  09_Advanced_Models.py
